Fix updates of the brush editor when the preset is chagned externally

When the preset is changes by keyboard shortcuts or by "reload" button,
the brush editor should see these changes. It was not needed before,
because the editor was a popup, but now it is a dialog, so shortcuts
are allowed while the editor is open.

BUG:443579